Update bblayers.conf for bbai
Upstream meta-ti has altered the layout of the layer and moved most of
what was in meta-ti into a subdirectory meta-ti-bsp layer.

Signed-off-by: Theodore A. Roth <troth@openavr.org>

--- a/build-bbai/conf/bblayers.conf
+++ b/build-bbai/conf/bblayers.conf
@@ -11,7 +11,7 @@ BBLAYERS ?= " \
   ${TOPDIR}/../oe/poky/meta-yocto-bsp \
   ${TOPDIR}/../oe/meta-arm/meta-arm-toolchain \
   ${TOPDIR}/../oe/meta-arm/meta-arm \
-  ${TOPDIR}/../oe/meta-ti \
+  ${TOPDIR}/../oe/meta-ti/meta-ti-bsp \
   ${TOPDIR}/../oe/meta-oe/meta-oe \
   ${TOPDIR}/../oe/meta-oe/meta-networking \
   ${TOPDIR}/../oe/meta-oe/meta-python \
