rpi4: Add LICENSE_FLAGS_ACCEPTED to local.conf
Without this, builds break for RaspberryPi now.

Signed-off-by: Theodore A. Roth <troth@openavr.org>

--- a/build-rpi4/conf/local.conf
+++ b/build-rpi4/conf/local.conf
@@ -1,4 +1,9 @@
 MACHINE = "raspberrypi4"
 DISTRO = "openavr"
 
+#
+# See ../oe/meta-raspberrypi/docs/ipcompliance.md
+#
+LICENSE_FLAGS_ACCEPTED = "synaptics-killswitch"
+
 require ${TOPDIR}/../scripts/conf/local-common.conf
