If present, include user.conf from local.conf
Signed-off-by: Theodore A. Roth <troth@openavr.org>

--- a/build-rpi4/conf/local.conf
+++ b/build-rpi4/conf/local.conf
@@ -1,3 +1,10 @@
+#
+# Put your user specific configuration data in 'user.conf' since this file is
+# managed by git. Only modify the 'local.conf' file for things that are
+# required to build the Judo image and will be commited to git.
+#
+include user.conf
+
 MACHINE = "raspberrypi4"
 DISTRO = "openavr"
 
