git: Ignore some build-* files
Signed-off-by: Theodore A. Roth <troth@openavr.org>

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,10 @@
 /oe
 
 build-*/conf/templateconf.cfg
+build-*/conf/conf-notes.txt
 build-*/*.log
 build-*/*.env
 build-*/cache
 build-*/tmp
+build-*/deploy-ti
+build-*/conf/user.conf
