--- a/build-bbb/conf/local.conf
+++ b/build-bbb/conf/local.conf
@@ -1,7 +1,7 @@
 #
 # Put your user specific configuration data in 'user.conf' since this file is
 # managed by git. Only modify the 'local.conf' file for things that are
-# required to build the Judo image and will be commited to git.
+# required to build the target image and will be commited to git.
 #
 include user.conf
 
